removing jsx to start fresh

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>Forward JS - React Workshop</title>
 </head>
 <body>
-  <!--<div id="html">Hello HTML</div>
-  <hr />-->
+
   <div id="js"></div>
   <hr />
   <div id="react"></div>
@@ -16,7 +15,7 @@
   <div id="app"></div>
 
   <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
-<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-  <script src="main.js"></script>
+  <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+  <script type="text/babel" src="main.js"></script>
 </body>
 </html>
