--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
   <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-  <script type="text/babel" src="main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
