--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
   <title>Forward JS - React Workshop</title>
 </head>
 <body>
-
-  <div id="js"></div>
-  <hr />
   <div id="react"></div>
-
-  <div id="app"></div>
 
   <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.min.js"></script>
+  <script type="text/babel" src="main.js"></script>
 </body>
 </html>
